[package]
name = "fexp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.28"
eframe = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] }
