[package]
name = "fexp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.32"
eframe = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs-2 = "3.0"
